<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.RegisterActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_logo"
                    android:layout_width="130dp"
                    android:layout_height="130dp" />
                <!---->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/signup_edit_text"
                    android:hint="@string/email"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />
                <!---->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginRight="15sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/signup_edit_text"
                    android:hint="@string/password"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/textColor" />
                <CheckBox
                    android:textColor="@color/colorPrimary"
                    android:text="@string/keep_me_logged"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!---->
                <android.support.v7.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    app:cardBackgroundColor="@color/signup_button"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </android.support.v7.widget.CardView>
                <RelativeLayout
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:layout_alignParentLeft="true" />
                    <TextView
                        android:id="@+id/login_activity_create_acount"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/new_account"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_google_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/register_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>