<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bottom_background"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rectangle">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:id="@+id/back"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/back" />

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/sign_up_img" />
            </RelativeLayout>
            <!--UserName-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="-30dp"
                android:elevation="5dp">

                <EditText
                    android:id="@+id/register_userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/userName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </android.support.v7.widget.CardView>
            <!--Email -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </android.support.v7.widget.CardView>
            <!--Retype Email-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <EditText
                    android:id="@+id/register_retype_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/retype_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </android.support.v7.widget.CardView>
            <!--Password-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </android.support.v7.widget.CardView>
            <!--Retype password-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <EditText
                    android:id="@+id/register_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/retype_password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/register_take_picture"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                app:cardCornerRadius="65dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView

                        android:layout_width="40dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/camera" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/user_camera_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/portrait" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <!-- GENDER Types-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <Spinner
                    android:id="@+id/register_genders"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:entries="@array/genders"></Spinner>
            </android.support.v7.widget.CardView>
            <!--Date Of birth Picker-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <EditText
                    android:id="@+id/register_birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:editable="false"
                    android:hint="@string/birthday"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </android.support.v7.widget.CardView>

            <!--Country Selection-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <Spinner
                    android:id="@+id/register_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/country_arrays"
                    android:prompt="@string/country"></Spinner>
            </android.support.v7.widget.CardView>
            <!--Unit Formate-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <Spinner
                    android:id="@+id/register_units"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/units"
                    android:prompt="@string/unity_format"></Spinner>
            </android.support.v7.widget.CardView>
            <!--Time Format-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">

                <Spinner
                    android:id="@+id/register_time_format"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/time"
                    android:prompt="@string/time_formate"></Spinner>
            </android.support.v7.widget.CardView>
            <!--Term and Services-->
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:checked="true"
                    android:id="@+id/register_term_of_services"
                    android:theme="@style/MyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />
                <View
                    android:layout_width="3dp"
                    android:layout_height="0dp"/>
                <ImageView
                    android:src="@drawable/term_agree"
                    android:layout_width="230dp"
                    android:layout_height="30dp" />
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:elevation="5dp">
                <Button
                    android:id="@+id/register_btn"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="SIGN UP"
                    android:background="@drawable/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v7.widget.CardView>
            <ImageView
                android:id="@+id/already_register"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:src="@drawable/alreayd"
                android:layout_width="230dp"
                android:layout_height="30dp" />
        </LinearLayout>
    </ScrollView>

        <ProgressBar
            android:id="@+id/register_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
</RelativeLayout>